; ModuleID = '/home/carl/AnghaBench/mpv/options/extr_m_option.c_time_get.c'
source_filename = "/home/carl/AnghaBench/mpv/options/extr_m_option.c_time_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mpv_node = type { %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i32 }

@MP_NOPTS_VALUE = common dso_local global double 0.000000e+00, align 8
@MPV_FORMAT_STRING = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [3 x i8] c"no\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, %struct.mpv_node*, i8*)* @time_get to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @time_get(i32* %0, i8* %1, %struct.mpv_node* %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca %struct.mpv_node*, align 8
  %9 = alloca i8*, align 8
  store i32* %0, i32** %6, align 8
  store i8* %1, i8** %7, align 8
  store %struct.mpv_node* %2, %struct.mpv_node** %8, align 8
  store i8* %3, i8** %9, align 8
  %10 = load i32*, i32** %6, align 8
  %11 = call i64 @HAS_NOPTS(i32* %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %28

13:                                               ; preds = %4
  %14 = load i8*, i8** %9, align 8
  %15 = bitcast i8* %14 to double*
  %16 = load double, double* %15, align 8
  %17 = load double, double* @MP_NOPTS_VALUE, align 8
  %18 = fcmp oeq double %16, %17
  br i1 %18, label %19, label %28

19:                                               ; preds = %13
  %20 = load i32, i32* @MPV_FORMAT_STRING, align 4
  %21 = load %struct.mpv_node*, %struct.mpv_node** %8, align 8
  %22 = getelementptr inbounds %struct.mpv_node, %struct.mpv_node* %21, i32 0, i32 1
  store i32 %20, i32* %22, align 4
  %23 = load i8*, i8** %7, align 8
  %24 = call i32 @talloc_strdup(i8* %23, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  %25 = load %struct.mpv_node*, %struct.mpv_node** %8, align 8
  %26 = getelementptr inbounds %struct.mpv_node, %struct.mpv_node* %25, i32 0, i32 0
  %27 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %26, i32 0, i32 0
  store i32 %24, i32* %27, align 4
  store i32 1, i32* %5, align 4
  br label %34

28:                                               ; preds = %13, %4
  %29 = load i32*, i32** %6, align 8
  %30 = load i8*, i8** %7, align 8
  %31 = load %struct.mpv_node*, %struct.mpv_node** %8, align 8
  %32 = load i8*, i8** %9, align 8
  %33 = call i32 @double_get(i32* %29, i8* %30, %struct.mpv_node* %31, i8* %32)
  store i32 %33, i32* %5, align 4
  br label %34

34:                                               ; preds = %28, %19
  %35 = load i32, i32* %5, align 4
  ret i32 %35
}

declare dso_local i64 @HAS_NOPTS(i32*) #1

declare dso_local i32 @talloc_strdup(i8*, i8*) #1

declare dso_local i32 @double_get(i32*, i8*, %struct.mpv_node*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
